--- a/templates/home.html
+++ b/templates/home.html
@@ -20,7 +20,4 @@
 <p></p>
 <hr />
 
-{% for row in excel_data %} {% for cell in row %}
-{{ cell }}&nbsp;&nbsp; {% endfor %}
-<br />
-{% endfor %} {% endblock%}
+{% endblock%}
