--- a/templates/table.html
+++ b/templates/table.html
@@ -1,3 +1,5 @@
+{% extends "base.html" %} {% block content %}
+<h2>Database Info</h2>
 <table>
   <tr>
     <th>Firstname</th>
@@ -15,29 +17,6 @@
     <td>{{ my_sub_item.address }}</td>
   </tr>
   {% endfor %}
-  <!-- <tr>
-    <td>Centro comercial Moctezuma</td>
-    <td>Francisco Chang</td>
-    <td>Mexico</td>
-  </tr>
-  <tr>
-    <td>Ernst Handel</td>
-    <td>Roland Mendel</td>
-    <td>Austria</td>
-  </tr>
-  <tr>
-    <td>Island Trading</td>
-    <td>Helen Bennett</td>
-    <td>UK</td>
-  </tr>
-  <tr>
-    <td>Laughing Bacchus Winecellars</td>
-    <td>Yoshi Tannamuri</td>
-    <td>Canada</td>
-  </tr>
-  <tr>
-    <td>Magazzini Alimentari Riuniti</td>
-    <td>Giovanni Rovelli</td>
-    <td>Italy</td>
-  </tr> -->
 </table>
+
+{% endblock%}
