--- a/templates/table.html
+++ b/templates/table.html
@@ -2,6 +2,7 @@
 <h2>Database Info</h2>
 <table>
   <tr>
+    <th>id</th>
     <th>Firstname</th>
     <th>Lastname</th>
     <th>Age</th>
@@ -10,6 +11,7 @@
   </tr>
   {% for my_sub_item in my_list %}
   <tr>
+    <td>{{ my_sub_item.id }}</td>
     <td>{{ my_sub_item.firstname }}</td>
     <td>{{ my_sub_item.lastname }}</td>
     <td>{{ my_sub_item.age }}</td>
